# galport

./: LICENCE.md  README.md  pyproject.toml  readthedocs.yaml
data/: Pot_axi_CylSpline_t400.ini  Pot_non_CylSpline_t400.ini  Pot_sph_CylSpline_t400.ini
docs/: New Document.txt  index.md  requirements.txt
docs/source/: OrbitTools.ipynb  classify.ipynb  conf.py  index.rst  installation.md  installation.rst  reference.rst  tutorials.rst
docs/source/notebooks/: HFitting.ipynb  OrbitTools.ipynb  actions.ipynb  classify.ipynb
docs/source/notebooks/data/: Pot_tri_CylSpline_t400.ini  phi_p.npy
docs/source/reference/: averager.rst  hamiltonian.rst  hamiltonian_fitting.rst  orbit_classifier.rst  orbit_generator.rst  orbit_tools.rst
notebooks/: actions.ipynb
src/galport/: __init__.py  averager.py  hamiltonian.py  hamiltonian_fitting.py  hamiltonian_list.py  mpspline.py  orbit_classifier.py  orbit_generator.py  orbit_tools.py
src/galport/data/: omega_p.npy
src/galport/notebooks/: HFitting.ipynb  actions.ipynb
