[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galport"
version = "0.1"
authors = [
    {name = "Viktor Zozulia", email = "vdzozulia.astro@gmail.com"}
]
description = "Package for investigating galactic models in action-angle space"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "agama",
    "naif",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["galport"]


[tool.setuptools.package-data]
"galport" = [
    "../notebooks/**",
    "../data/**",
]

[project.urls]
Homepage = "https://github.com/vdzozulia/galport"
Repository = "https://github.com/vdzozulia/galport"
